--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>ca1</artifactId>
+    <artifactId>javafx-uml</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>ca1</name>
 
